--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bulma-switch": "^2.0.0"
+    "bulma-switch": "^2.0.0",
+    "bulma-tooltip": "^3.0.2"
   }
 }
